--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -1,3 +1,26 @@
-<p>
-  heroe works!
-</p>
+
+<h1> {{ heroe.nombre }} <small> {{heroe.aparicion}} </small></h1>
+<hr>
+<div class="row">
+  <div class="col-md-3">
+    <img class="img-fluid" [src]="heroe.img" [alt]="heroe.nombre"> <!--src={{heroe.img}} alt="{{heroe.nombre}}"--> 
+    <br><br>
+    <a  [routerLink]="'/heroes'" class="btn btn-outline-danger btn-block">Regresar</a> <!--href="/heroes" -->
+  </div>
+  <div class="col-md-9">
+    <h3>{{heroe.nombre}}</h3>
+    <hr>
+    <p>{{heroe.bio}}</p>
+    <div>
+      <img *ngIf="heroe.casa == 'Marvel'" class="img-logo" src="assets/img/marvel.png" alt="Marvel">
+      <img *ngIf="heroe.casa == 'DC'" class="img-logo" src="assets/img/dc.png" alt="DC">
+    </div>
+  </div>
+</div>
+  
+  <!--<div *ngIf="{{heroe.casa}} === 'marvel'">
+        <img  src="assets/img/marvel.png" alt="Marvel" width="250px" height="150px">
+      </div>
+      <div *ngIf="{{heroe.casa}} === 'dc'">
+        <img  src="assets/img/dc.png" alt="DC" width="250px" height="150px">
+      </div>-->
